updated workshop pages

--- a/intaglio-v3/HTML/workshop/deloitte.html
+++ b/intaglio-v3/HTML/workshop/deloitte.html
@@ -86,18 +86,18 @@
             <div class="clearfix">
               <h2 class='bold event-title-small small-screen'> CONSULTING - Industry 4.0 </h2>
               <h3>"The first step to solving any problem is to accept one’s own accountability in creating it” - Stan Slap</h3>
-              <p>IIM Calcutta’s INTAGLIO in partnership with Deloitte proudly brings to you, Case based Management Consulting workshop aimed at understanding the consulting frameworks and skill sets required in this Industry. The case to be discussed is on strategy and operations. The session will also touch on the recent changes and upcoming trends in automation and data exchange technologies i.e. Industry 4.0</p>
+              <p>Intaglio Dec 2017 in partnership with Deloitte proudly brings to you, Case based Management Consulting workshop aimed at understanding the consulting frameworks and skill sets required in this Industry. The case to be discussed is on strategy and operations. The session will also touch on the recent changes and upcoming trends in automation and data exchange technologies i.e. Industry 4.0</p>
               <div style='display:flex; justify-content:space-between'>
                 <div> <b>Key Takeaways</b>
                   <ul>
                     <li>A detailed understanding of Consulting Industry and its way of operations in India..</li>
                     <li>Understanding the skill set required to sustain in this industry.</li>
                     <li>Learning the upcoming hot trends in data automation and exchange technologies used by various firms.</li>
-                    <li>Certificates will be awarded upon the completion of the workshop.</li>
+                    <li>Certificates  to all the participants upon the completion of the workshop.</li>
                   </ul>
                 </div>
                 <div>
-                  <b> Registration Amount : TBA </b>
+                  <b> Registration Amount : Rs. 750 </b>
                 </div>
               </div>
               <div id = 'regBtn' class='pull-right small-screen'><a href='https://www.townscript.com/e/intaglio-workshop-series-dec-2017-020002'>Register/Sign In</a></div>
