--- a/intaglio-v3/HTML/workshop/ogl.html
+++ b/intaglio-v3/HTML/workshop/ogl.html
@@ -96,10 +96,10 @@
                   </ul>
                 </div>
                 <div>
-                  <b> Registration Amount : TBA </b>
+                  <b> Registration Amount : Rs. 1000 </b>
                 </div>
               </div>
-              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY1/ADSENSE'>Register/Sign In</a></div>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='https://www.townscript.com/e/intaglio-workshop-series-dec-2017-020002'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
