--- a/intaglio-v3/HTML/workshop/pant.html
+++ b/intaglio-v3/HTML/workshop/pant.html
@@ -3,7 +3,7 @@
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>UBER - Intaglio 2017</title>
+        <title>Workshop - Intaglio 2017</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
@@ -68,7 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
-                            <div class='event-title bold' style='width:67%'> Operations Management </div>
+                            <div class='event-title bold' style='width:67%'> Craft of Strategic Leadership</div>
                             <div id = 'regBtn' class='pull-right' style='border-radius:45px;width:75px'><a href='https://www.townscript.com/e/intaglio-workshop-series-dec-2017-020002'>Register</a></div>
                         </div>
                     </div>
@@ -84,20 +84,18 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
-              <h2 class='bold event-title-small small-screen'> Operations Management </h2>
-              <!-- <h3>"If journalism is good, then it is controversial by its nature"- Julian Assange</h3> -->
-              <p>Intaglio Dec 2017 in partnership with Uber proudly brings to you, the case based operations workshop aimed at understanding how the operations management has evolved over the past few years and how the companies in India have adapted to such change in the conventional process. The workshop will also focus on defining the importance of resources that needs to be addressed while dealing with operations. The workshop will also highlight the concept of Shared Economy which is well adopted by Uber and practiced by many companies in India. It indirectly involves keeping no inventory and sharing the resources.</p>
+              <h2 class='bold event-title-small small-screen'> The Strategist's Journey and the Hidden Fortress: Cinema and the Craft of Strategic Leadership </h2>
+              <h3>"In the midst of chaos, there is also opportunity." - Sun Tzu</h3>
+              <p>This workshop draws upon the power of cinema to explore the idea of strategy as a process and a journey. It involves an interactive discussion around Akira Kurosawa's 1958 epic movie 'The Hidden Fortress' and what it tells us about the nature of choices made by strategists in the process of conceptualizing and acting upon strategy. This process of making strategic choices on a certain set of dimensions over time is viewed as the craft of strategic leadership.</p>
               <div style='display:flex; justify-content:space-between'>
                 <div> <b>Key Takeaways</b>
                   <ul>
-                    <li>A detailed understanding on the Uber's’ Operations</li>
-                    <li>Knowledge sharing on key concepts of Operations & Shared economy by Instructors</li>
-                    <li>Certificates to all the participants upon the completion of the workshop</li>
-
+                    <li>What does it mean to conceptualize strategy as a journey involving intertwined choices, rather than as a choice at a given point in time? </li>
+                    <li>What are the essential skills to practice the craft of strategic leadership? </li>
                   </ul>
                 </div>
                 <div>
-                  <b> Registration Amount : Rs. 1000 </b>
+                  <b> Registration Amount : Free </b>
                 </div>
               </div>
               <div id = 'regBtn' class='pull-right small-screen'><a href='https://www.townscript.com/e/intaglio-workshop-series-dec-2017-020002'>Register/Sign In</a></div>
@@ -109,7 +107,7 @@
                     <article><a href="#" class="icon"><i class="fa fa-glass"></i></a>
                       <h6 class="heading">Corporate Partner
                       </h6>
-                      <p><b>UBER</b>
+                      <p>Institute Professor (Strategic Management Group)
                       </p>
                     </article>
                   </li>
@@ -117,14 +115,15 @@
                     <article><a href="#" class="icon"><i class="fa fa-globe"></i></a>
                       <h6 class="heading">Speaker
                       </h6>
-                      <p> Kamal Ganeriwala, Abhimanyu Shirwalkar</p>
+                      <p>Prof. Anirvan Pant
+                      </p>
                     </article>
                   </li>
                   <li>
                     <article><a href="#" class="icon"><i class="fa fa-shekel"></i></a>
-                      <h6 class="heading">Date, Time, Duration
+                      <h6 class="heading">Date, Time & Duration
                       </h6>
-                      <p>17th Dec,2 PM, 2 Hours</p>
+                      <p>16th December, 10:30am-12:30pm (2 hours)</p>
                     </article>
                   </li>
                 </ul>
@@ -134,12 +133,11 @@
                   <h4> Instructors </h4>
                   <div>
                     <ul>
-                      <li><b>Kamal Ganeriwala</b> is an IIM Calcutta graduate, class of 2014. He is currently the Senior Manager at Uber and has an overall experience of more than 6 years. He has worked with A.T.Kearney for around 2 years as a Consultant and has handled diverse set of projects and clients ranging from Telecom players, DTH service providers etc. He has also worked with Grail Research and Oracle for few years.</li>
-                      <li><b>Abhimanyu Shirwalkar</b> is an ISB alumni of 2015. He is currently the Marketing Head of East India, Uber. He has worked for more than 2 years as an Associate Consultant with ZS Associates handling sales strategy design in Diabetes and Oncology companies. He has also worked with Deloitte as a Consultant handling projects on financial services, market entry strategy generation for gene developing firm etc. His overall work experience stands more than 7 years.</li>
+                      <li><b>  Anirvan Pant </b> is an Associate Professor of Strategic Management at the Indian Institute of Management Calcutta. He is primarily interested in studying the processes of identity evolution, legitimation, and category emergence in global strategy. Anirvan’s work has been published in leading scholarly and practitioner journals, including the Harvard Business Review, Journal of International Business Studies, Global Strategy Journal, and the Journal of Product Innovation Management, and has been cited in the Economist. Anirvan was a finalist for the Gunnar Hedlund Award 2010/2011 for the best dissertation in the field of international business. He has received the Outstanding Reviewer Award for 2005–2009 and the FDC Best Paper in Strategy/IB Theory Award 2011 from the International Management Division of the Academy of Management. His courses at IIM Calcutta are usually rated the top by students.</li>
                     </ul>
                   </div>
                 </div>
-                <!-- <div class="clearfix rules">
+                <div class="clearfix rules">
                   <h4> Terms & Conditions </h4>
                   <ul>
                     <li>Workshop is open for all</li>
@@ -152,7 +150,7 @@
                     <li>No cancellation can be done, however the attendee can find a suitable replacement</li>
                     <li>In all matters related to the workshop, the decision by organisers will be final and binding</li>
                   </ul>
-                </div> -->
+                </div>
 
               </div>
             </div>
