--- a/intaglio-v3/HTML/workshop/sbi.html
+++ b/intaglio-v3/HTML/workshop/sbi.html
@@ -68,7 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
-                            <div class='event-title bold' style='width:67%'> Craft of Strategic Leadership</div>
+                            <div class='event-title bold' style='width:67%'> Intangible Wealth Management</div>
                             <div id = 'regBtn' class='pull-right' style='border-radius:45px;width:75px'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003'>Register</a></div>
                         </div>
                     </div>
@@ -84,22 +84,22 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
-              <h2 class='bold event-title-small small-screen'> The Strategist's Journey and the Hidden Fortress: Cinema and the Craft of Strategic Leadership </h2>
-              <h3>"In the end, all business operations can be reduced to three words: people, product, and profits."- lee Iacocca</h3>
-              <p>IIM Lucknow’s Manfest-Varchasva in partnership with Google proudly brings to you, the marketing workshop aimed at understanding how the age-old art of marketing has transformed in the modern times. Digital ecosystem has witnessed a revolution over the past years and Mobile as a marketing medium has gained huge prominence. With ever increasing transactions over internet and the unrestricted inflow of information about customer behavior, it is essential for marketers to stay relevant in this ever-evolving world and target the right set of users at various stages of product cycle.</p>
+              <h2 class='bold event-title-small small-screen'> Wealth of Being Human: Intangible Wealth Management </h2>
+              <h3>"Money, like emotions, is something you must control to keep your life on the right track" -Natasha munson</h3>
+              <p>At the time when the entire world is behind the materialistic possessions, little thought is given to the gifts of nature – life, more importantly, the life in the form of humans. In order to achieve the desired possessions, it is sometime important to understand the role of the unseen elements and manage it properly. This workshop will teach you how to manage oneself and how to improve managerial capacity using the context of philosophy.</p>
               <div style='display:flex; justify-content:space-between'>
                 <div> <b>Key Takeaways</b>
                   <ul>
-                    <li>A detailed understanding of marketing methodology </li>
-                    <li>Rigorous training across various aspects with experienced instructors </li>
-                    <li>Certificates will be awarded upon the completion of the workshop </li>
+                    <li>Learn how to manage intangible assets </li>
+                    <li>Understand how to increase one’s managerial capacity </li>
+                    <li>Certificates to all the participants upon the completion of the workshop </li>
                   </ul>
                 </div>
                 <div>
-                  <b> Registration Amount : Rs. 2000 </b>
+                  <b> Registration Amount : Rs. 500 </b>
                 </div>
               </div>
-              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY1/ADSENSE'>Register/Sign In</a></div>
+              <div id = 'regBtn' class='pull-right small-screen'><a href='https://www.townscript.com/e/intaglio-workshop-series-dec-2017-020002'>Register/Sign In</a></div>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
@@ -108,7 +108,7 @@
                     <article><a href="#" class="icon"><i class="fa fa-glass"></i></a>
                       <h6 class="heading">Corporate Partner
                       </h6>
-                      <p>Prof. Anirvan Pant
+                      <p>SBI
                       </p>
                     </article>
                   </li>
@@ -116,7 +116,7 @@
                     <article><a href="#" class="icon"><i class="fa fa-globe"></i></a>
                       <h6 class="heading">Speaker
                       </h6>
-                      <p>Prof. Anirvan Pant
+                      <p>Mr Mahesh Goel
                       </p>
                     </article>
                   </li>
@@ -124,7 +124,7 @@
                     <article><a href="#" class="icon"><i class="fa fa-shekel"></i></a>
                       <h6 class="heading">Date, Time & Duration
                       </h6>
-                      <p>16th December, 10:30am-12:30pm (2 hours)</p>
+                      <p>16th December, 02:00pm-04:00pm (2 hours)</p>
                     </article>
                   </li>
                 </ul>
@@ -134,21 +134,22 @@
                   <h4> Instructors </h4>
                   <div>
                     <ul>
-                      <li><b>  Mr. Madhukar Sabnavis </b> – Vice Chairman and Country Head, Discovery and Planning, O&M India. As a veteran he has experience over 32 years. Over these years he worked with many national and international clients. He helped creating many agency brands. Under his leadership of planning in India, Ogilvy has become a much awarded Indian agency at the Indian Effies and Asian Marketing Effectiveness Awards.</li>
+                      <li><b>  Mr Mahesh Goel, </b> is a General Manager with SBI and has more than 29 years of rich experience in the Banking Industry across various circles in Gujarat, Uttar Pradesh and West Bengal. He has delivered several such lectures in the past.</li>
                     </ul>
                   </div>
                 </div>
                 <div class="clearfix rules">
                   <h4> Terms & Conditions </h4>
                   <ul>
-                    <li> It is mandatory for all attendees to register for at least 3 workshops to be a  </li>
-                    part of TRBS Workshops (Note: You won’t be able to checkout with less than 3 workshops in your cart)
-                    <li> The registration amount does not include accommodation fee. </li>
-                    <li> Transportation arrangements should be taken care by the attendees themselves </li>
-                    <li> The timing and venue of the workshops will be communicated at a point closer to the event </li>
-                    <li> TRBS receives the right to modify the content, date/timing and venue of the workshops at any point of time </li>
-                    <li> In case of cancellation of any workshop by the Organizer, TRBS will be responsible to provide an alternative/replacement workshop for all the registrants </li>
-                    <li> No refund will be provided in any case </li>
+                    <li>Workshop is open for all</li>
+                    <li>Schedule is tentative and may get revised due to unforeseen circumstances</li>
+                    <li>Registration fee includes complimentary food coupons and free access to spot events</li>
+                    <li>Registration fee does not include accommodation & local conveyance charges</li>
+                    <li>Accommodation can be booked separately which will be communicated for the registered members</li>
+                    <li>Attendees must bring a valid government/college ID</li>
+                    <li>Under any circumstances, NO refund will be provided</li>
+                    <li>No cancellation can be done, however the attendee can find a suitable replacement</li>
+                    <li>In all matters related to the workshop, the decision by organisers will be final and binding</li>
                   </ul>
                 </div>
 
