--- a/intaglio-v3/HTML/workshop/smis.html
+++ b/intaglio-v3/HTML/workshop/smis.html
@@ -86,7 +86,7 @@
             <div class="clearfix">
               <h2 class='bold event-title-small small-screen'> Virtual Reality in Marketing  </h2>
               <h3>"Virtual Reality is the first step in a grand adventure into the landscape of the imagination"</h3>
-              <p>IIM Calcutta’s INTAGLIO in partnership with SHILPMIS proudly brings to you, the VR workshop aimed at understanding how this cutting edge technology can supplement and elevate everything from presentations to marketing strategies.</p>
+              <p>Intaglio Dec 2017 in partnership with SHILPMIS proudly brings to you, the VR workshop aimed at understanding how this cutting edge technology can supplement and elevate everything from presentations to marketing strategies.</p>
               <div style='display:flex; justify-content:space-between'>
                 <div> <b>Key Takeaways</b>
                   <ul>
@@ -96,7 +96,7 @@
                   </ul>
                 </div>
                 <div>
-                  <b> Registration Amount : (TBA) </b>
+                  <b> Registration Amount : Rs. 500 </b>
                 </div>
               </div>
               <div id = 'regBtn' class='pull-right small-screen'><a href='https://www.townscript.com/e/intaglio-workshop-series-dec-2017-020002'>Register/Sign In</a></div>
