changes in layout

--- a/intaglio-v3/HTML/workshop/iim.html
+++ b/intaglio-v3/HTML/workshop/iim.html
@@ -67,7 +67,7 @@
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
-                        <div class="menu-container">
+                        <div class="menu-container large-screen">
                             <div class='event-title bold' style='width:67%'> The Craft of Strategic Leadership</div>
                             <div id = 'regBtn' class='pull-right' style='border-radius:45px;width:75px'><a href='https://www.townscript.com/e/intaglio-workshop-series-dec-2017-020002'>Register</a></div>
                         </div>
@@ -87,7 +87,7 @@
               <h2 class='bold event-title-small small-screen'> The Craft of Strategic Leadership </h2>
               <h3>“Leaders become great not because of their power but because of their ability to empower others” - John Maxwell</h3>
               <p>For decades, business executives have concentrated on the art and techniques of management. But in today's competitive times, more is required. Successful executives must be leaders as well. In this dynamic world leaders are in a position to create opportunities and build our businesses around to witness our dreams turning into reality. Strategic leadership provides the vision and direction for the growth and success of an organization. A strategic leader institutionalizes a vision and helps the members of the organization to learn how to convert the objectives into action. This workshop will surely entail your thought of what Strategic leadership is all about.</p>
-              <div style='display:flex; justify-content:space-between'>
+              <div class='large-screen' style='display:flex; justify-content:space-between'>
                 <div> <b>Key Takeaways</b>
                   <ul>
                     <li>Understand what’s important to achieve something that delivers value in organisations,corporates</li>
@@ -101,7 +101,21 @@
                   <b> Registration Amount : TBA </b>
                 </div>
               </div>
-              <div id = 'regBtn' class='pull-right small-screen'><a href='https://www.townscript.com/e/intaglio-workshop-series-dec-2017-020002'>Register/Sign In</a></div>
+              <div class='small-screen'>
+                <div> <b>Key Takeaways</b>
+                  <ul>
+                    <li>Understand what’s important to achieve something that delivers value in organisations,corporates</li>
+                    <li>Clear view why an integrated leadership architecture is vital to business success</li>
+                    <li>Insights to evaluate leadership development for success at individual & organisational levels</li>
+                    <li>Awareness of current firm development and implementation strategies</li>
+                    <li>All attendees will be provided IIM C participation certificates</li>
+                  </ul>
+                </div>
+                <div>
+                  <b> Registration Amount : TBA </b>
+                </div>
+              </div><br/><br/>
+              <div id = 'regBtn' class='small-screen'><a href='https://www.townscript.com/e/intaglio-workshop-series-dec-2017-020002'>Register/Sign In</a></div><br/>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
