--- a/intaglio-v3/HTML/test/workshop/iim.html
+++ b/intaglio-v3/HTML/test/workshop/iim.html
@@ -3,7 +3,7 @@
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Workshop - Intaglio 2017</title>
+        <title>IIM C - Intaglio 2017</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
@@ -67,9 +67,9 @@
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
-                        <div class="menu-container">
-                            <div class='event-title bold' style='width:67%'> Craft of Strategic Leadership</div>
-                            <div id = 'regBtn' class='pull-right' style='border-radius:45px;width:75px'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003'>Register</a></div>
+                        <div class="menu-container large-screen">
+                            <div class='event-title bold' style='width:67%'> The Craft of Strategic Leadership</div>
+                            <div id = 'regBtn' class='pull-right' style='border-radius:45px;width:75px'><a href='https://www.townscript.com/e/intaglio-workshop-series-dec-2017-020002'>Register</a></div>
                         </div>
                     </div>
                     <!-- End Navbar Collapse -->
@@ -84,22 +84,38 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
-              <h2 class='bold event-title-small small-screen'> The Strategist's Journey and the Hidden Fortress: Cinema and the Craft of Strategic Leadership </h2>
-              <h3>"In the end, all business operations can be reduced to three words: people, product, and profits."- lee Iacocca</h3>
-              <p>IIM Lucknow’s Manfest-Varchasva in partnership with Google proudly brings to you, the marketing workshop aimed at understanding how the age-old art of marketing has transformed in the modern times. Digital ecosystem has witnessed a revolution over the past years and Mobile as a marketing medium has gained huge prominence. With ever increasing transactions over internet and the unrestricted inflow of information about customer behavior, it is essential for marketers to stay relevant in this ever-evolving world and target the right set of users at various stages of product cycle.</p>
-              <div style='display:flex; justify-content:space-between'>
+              <h2 class='bold event-title-small small-screen'> The Craft of Strategic Leadership </h2>
+              <h3>“Leaders become great not because of their power but because of their ability to empower others” - John Maxwell</h3>
+              <p>For decades, business executives have concentrated on the art and techniques of management. But in today's competitive times, more is required. Successful executives must be leaders as well. In this dynamic world leaders are in a position to create opportunities and build our businesses around to witness our dreams turning into reality. Strategic leadership provides the vision and direction for the growth and success of an organization. A strategic leader institutionalizes a vision and helps the members of the organization to learn how to convert the objectives into action. This workshop will surely entail your thought of what Strategic leadership is all about.</p>
+              <div class='large-screen' style='display:flex; justify-content:space-between'>
                 <div> <b>Key Takeaways</b>
                   <ul>
-                    <li>A detailed understanding of marketing methodology </li>
-                    <li>Rigorous training across various aspects with experienced instructors </li>
-                    <li>Certificates will be awarded upon the completion of the workshop </li>
+                    <li>Understand what’s important to achieve something that delivers value in organisations,corporates</li>
+                    <li>Clear view why an integrated leadership architecture is vital to business success</li>
+                    <li>Insights to evaluate leadership development for success at individual & organisational levels</li>
+                    <li>Awareness of current firm development and implementation strategies</li>
+                    <li>All attendees will be provided IIM C participation certificates</li>
                   </ul>
                 </div>
                 <div>
-                  <b> Registration Amount : Rs. 2000 </b>
+                  <b> Registration Amount : TBA </b>
                 </div>
               </div>
-              <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY1/ADSENSE'>Register/Sign In</a></div>
+              <div class='small-screen'>
+                <div> <b>Key Takeaways</b>
+                  <ul>
+                    <li>Understand what’s important to achieve something that delivers value in organisations,corporates</li>
+                    <li>Clear view why an integrated leadership architecture is vital to business success</li>
+                    <li>Insights to evaluate leadership development for success at individual & organisational levels</li>
+                    <li>Awareness of current firm development and implementation strategies</li>
+                    <li>All attendees will be provided IIM C participation certificates</li>
+                  </ul>
+                </div>
+                <div>
+                  <b> Registration Amount : TBA </b>
+                </div>
+              </div><br/><br/>
+              <div id = 'regBtn' class='small-screen'><a href='https://www.townscript.com/e/intaglio-workshop-series-dec-2017-020002'>Register/Sign In</a></div><br/>
             </div>
             <div class="clearfix">
               <div class="col-md-6 split">
@@ -108,7 +124,7 @@
                     <article><a href="#" class="icon"><i class="fa fa-glass"></i></a>
                       <h6 class="heading">Corporate Partner
                       </h6>
-                      <p>Prof. Anirvan Pant
+                      <p><b> IIM Calcutta Professor - Strategic Management Group</b>
                       </p>
                     </article>
                   </li>
@@ -116,15 +132,15 @@
                     <article><a href="#" class="icon"><i class="fa fa-globe"></i></a>
                       <h6 class="heading">Speaker
                       </h6>
-                      <p>Prof. Anirvan Pant
+                      <p>Anirvan Pant
                       </p>
                     </article>
                   </li>
                   <li>
                     <article><a href="#" class="icon"><i class="fa fa-shekel"></i></a>
-                      <h6 class="heading">Date, Time & Duration
+                      <h6 class="heading">Date, Time, Duration
                       </h6>
-                      <p>16th December, 10:30am-12:30pm (2 hours)</p>
+                      <p>17th Dec, 10 AM, 3 Hours</p>
                     </article>
                   </li>
                 </ul>
@@ -134,23 +150,24 @@
                   <h4> Instructors </h4>
                   <div>
                     <ul>
-                      <li><b>  Mr. Madhukar Sabnavis </b> – Vice Chairman and Country Head, Discovery and Planning, O&M India. As a veteran he has experience over 32 years. Over these years he worked with many national and international clients. He helped creating many agency brands. Under his leadership of planning in India, Ogilvy has become a much awarded Indian agency at the Indian Effies and Asian Marketing Effectiveness Awards.</li>
+                      <li><b>Anirvan Pant</b> is an Associate Professor of Strategic Management at the Indian Institute of Management (IIM) Calcutta. He is primarily interested in studying the processes of identity evolution, legitimation, and category emergence in global strategy. Anirvan’s work has been published in leading scholarly and practitioner journals, including the Harvard Business Review, Journal of International Business Studies, Global Strategy Journal, and the Journal of Product Innovation Management, and has been cited in the Economist. Anirvan was a finalist for the Gunnar Hedlund Award 2010/2011 for the best dissertation in the field of international business. He has received the Outstanding Reviewer Award for 2005–2009 and the FDC Best Paper in Strategy/IB Theory Award 2011 from the International Management Division of the Academy of Management. His courses at IIM Calcutta are usually rated the top by students.</li>
                     </ul>
                   </div>
                 </div>
-                <div class="clearfix rules">
+                <!-- <div class="clearfix rules">
                   <h4> Terms & Conditions </h4>
                   <ul>
-                    <li> It is mandatory for all attendees to register for at least 3 workshops to be a  </li>
-                    part of TRBS Workshops (Note: You won’t be able to checkout with less than 3 workshops in your cart)
-                    <li> The registration amount does not include accommodation fee. </li>
-                    <li> Transportation arrangements should be taken care by the attendees themselves </li>
-                    <li> The timing and venue of the workshops will be communicated at a point closer to the event </li>
-                    <li> TRBS receives the right to modify the content, date/timing and venue of the workshops at any point of time </li>
-                    <li> In case of cancellation of any workshop by the Organizer, TRBS will be responsible to provide an alternative/replacement workshop for all the registrants </li>
-                    <li> No refund will be provided in any case </li>
+                    <li>Workshop is open for all</li>
+                    <li>Schedule is tentative and may get revised due to unforeseen circumstances</li>
+                    <li>Registration fee includes complimentary food coupons and free access to spot events</li>
+                    <li>Registration fee does not include accommodation & local conveyance charges</li>
+                    <li>Accommodation can be booked separately which will be communicated for the registered members</li>
+                    <li>Attendees must bring a valid government/college ID</li>
+                    <li>Under any circumstances, NO refund will be provided</li>
+                    <li>No cancellation can be done, however the attendee can find a suitable replacement</li>
+                    <li>In all matters related to the workshop, the decision by organisers will be final and binding</li>
                   </ul>
-                </div>
+                </div> -->
 
               </div>
             </div>
