--- a/intaglio-v3/HTML/workshop/altnews.html
+++ b/intaglio-v3/HTML/workshop/altnews.html
@@ -99,7 +99,7 @@
                   <b> Registration Amount : Rs. 500 </b>
                 </div>
               </div>
-              <div class='large-screen'>
+              <div class='small-screen'>
                 <div> <b>Key Takeaways</b>
                   <ul>
                     <li>Understand and identify misinformation around us</li>
