--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -1058,13 +1058,14 @@
                       <div class='wrapper' style='border: 1px solid #ddd'>
                         <div class='workshop'>
                           <div class = 'workshop_main'>
-                            <img src="img/workshop/icici.jpg" alt="Clients Logo">
+                            <img src="img/workshop/uber.jpg" alt="Clients Logo">
                           </div>
-                          <div class='desc-workshop'>
-                            <div style='font-size:16px;'><b> Debunking Fake News </b></div>
-                            <div style='font-weight:500'> Speaker : Pratik Sinha </div>
-                            <div style='font-weight:500'> Date: 16th Dec, 12 PM </div>
-                            <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/icici.html' target='_blank'>More Details</a></button>
+                          <div class='desc-workshop' style='margin-top:-20px'>
+                            <div style='font-size:16px;'><b> Operations Management </b></div>
+                            <div style='font-weight:500'> Speaker : Kamal Ganeriwala, </div>
+                            <div style='font-weight:500'> Abhimanyu Shirwalkar </div>
+                            <div style='font-weight:500'> Date: 17th Dec, 2 PM </div>
+                            <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/uber.html' target='_blank'>More Details</a></button>
                           </div>
                         </div>
                       </div>
@@ -1135,18 +1136,18 @@
                   </div>
                   <br />
                   <div class='row'>
+                    
                     <div class="col-xs-6 col-md-3 col-border">
                       <div class='wrapper' style='border: 1px solid #ddd'>
                         <div class='workshop'>
                           <div class = 'workshop_main'>
-                            <img src="img/workshop/uber.jpg" alt="Clients Logo">
+                            <img src="img/workshop/deloitte.jpg" alt="Clients Logo">
                           </div>
                           <div class='desc-workshop'>
-                            <div style='font-size:16px;'><b> Operations Management </b></div>
-                            <div style='font-weight:500'> Speaker : Kamal Ganeriwala, </div>
-                            <div style='font-weight:500'> Abhimanyu Shirwalkar </div>
-                            <div style='font-weight:500'> Date: 17th Dec, 2 PM </div>
-                            <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/uber.html' target='_blank'>More Details</a></button>
+                            <div style='font-size:16px;'><b> CONSULTING - Industry 4.0 </b></div>
+                            <div style='font-weight:500'> Speaker : Mr Sandeep Chatterjee </div>
+                            <div style='font-weight:500'> Date: 17th Dec, 4 PM </div>
+                            <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/deloitte.html' target='_blank'>More Details</a></button>
                           </div>
                         </div>
                       </div>
@@ -1155,14 +1156,13 @@
                       <div class='wrapper' style='border: 1px solid #ddd'>
                         <div class='workshop'>
                           <div class = 'workshop_main'>
-                            <img src="img/workshop/uber.jpg" alt="Clients Logo">
+                            <img src="img/workshop/pant.jpg" alt="Clients Logo">
                           </div>
                           <div class='desc-workshop'>
-                            <div style='font-size:16px;'><b> Operations Management </b></div>
-                            <div style='font-weight:500'> Speaker : Kamal Ganeriwala, </div>
-                            <div style='font-weight:500'> Abhimanyu Shirwalkar </div>
-                            <div style='font-weight:500'> Date: 16th Dec, 2 PM </div>
-                            <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/uber.html' target='_blank'>More Details</a></button>
+                            <div style='font-size:16px;'><b> Strategic Management Group </b></div>
+                            <div style='font-weight:500'> Speaker : Prof. Anirvan Pant </div>
+                            <div style='font-weight:500'> Date: 17th Dec, 10:00 AM </div>
+                            <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/iim.html' target='_blank'>More Details</a></button>
                           </div>
                         </div>
                       </div>
@@ -1197,13 +1197,14 @@
                             <div class='wrapper' style='position: absolute;left: 22%; border: 1px solid #ddd'>
                               <div class='workshop'>
                                 <div class = 'workshop_main'>
-                                  <img class="swiper-clients-img" src="img/workshop/icici.jpg" alt="Clients Logo">
+                                  <img class="swiper-clients-img" src="img/workshop/uber.jpg" alt="Clients Logo">
                                 </div>
-                                <div class='desc-workshop'>
-                                  <div style='font-size:16px;'><b> Debunking Fake News </b></div>
-                                  <div style='font-weight:500'> Speaker : Pratik Sinha </div>
-                                  <div style='font-weight:500'> Date: 16th Dec, 12 PM </div>
-                                  <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/icici.html' target='_blank'>More Details</a></button>
+                                <div class='desc-workshop' style='margin-top:-20px'>
+                                  <div style='font-size:16px;'><b> Operations Management </b></div>
+                                  <div style='font-weight:500'> Speaker : Kamal Ganeriwala, </div>
+                                  <div style='font-weight:500'> Abhimanyu Shirwalkar </div>
+                                  <div style='font-weight:500'> Date: 16th Dec, 2 PM </div>
+                                  <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/uber.html' target='_blank'>More Details</a></button>
                                 </div>
                               </div>
                             </div>
@@ -1269,20 +1270,34 @@
                             </div>
                           </div>
                           <div class="swiper-slide">
-                              <div class='wrapper' style='position: absolute;left: 22%; border: 1px solid #ddd'>
-                                <div class='workshop'>
-                                  <div class = 'workshop_main'>
-                                    <img class="swiper-clients-img" src="img/workshop/uber.jpg" alt="Clients Logo">
-                                  </div>
-                                  <div class='desc-workshop'>
-                                    <div style='font-size:16px;'><b> Operations Management </b></div>
-                                    <div style='font-weight:500'> Speaker : Kamal Ganeriwala, </div>
-                                    <div style='font-weight:500'> Abhimanyu Shirwalkar </div>
-                                    <div style='font-weight:500'> Date: 16th Dec, 2 PM </div>
-                                    <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/uber.html' target='_blank'>More Details</a></button>
-                                  </div>
+                            <div class='wrapper' style='position: absolute;left: 22%; border: 1px solid #ddd'>
+                              <div class='workshop'>
+                                <div class = 'workshop_main'>
+                                  <img class="swiper-clients-img" src="img/workshop/deloitte.jpg" alt="Clients Logo">
+                                </div>
+                                <div class='desc-workshop'>
+                                  <div style='font-size:16px;'><b> CONSULTING - Industry 4.0 </b></div>
+                                  <div style='font-weight:500'> Speaker : Kamal Ganeriwala </div>
+                                  <div style='font-weight:500'> Date: 16th Dec, 2:00 PM </div>
+                                  <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/deloitte.html' target='_blank'>More Details</a></button>
                                 </div>
                               </div>
+                            </div>
+                          </div>
+                          <div class="swiper-slide">
+                            <div class='wrapper' style='position: absolute;left: 22%; border: 1px solid #ddd'>
+                              <div class='workshop'>
+                                <div class = 'workshop_main'>
+                                  <img class="swiper-clients-img" src="img/workshop/pant.jpg" alt="Clients Logo">
+                                </div>
+                                <div class='desc-workshop'>
+                                  <div style='font-size:16px;'><b> Strategic Management Group </b></div>
+                                  <div style='font-weight:500'> Speaker : Prof. Anirvan Pant </div>
+                                  <div style='font-weight:500'> Date: 17th Dec, 10:00 AM </div>
+                                  <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/iim.html' target='_blank'>More Details</a></button>
+                                </div>
+                              </div>
+                            </div>
                           </div>
                       </div>
                   </div>
