updated workshop content

--- a/intaglio-v3/HTML/workshop/iim.html
+++ b/intaglio-v3/HTML/workshop/iim.html
@@ -85,7 +85,7 @@
           <div class="container event-details">
             <div class="clearfix">
               <h2 class='bold event-title-small small-screen'> The Craft of Strategic Leadership </h2>
-              <h3>“Leaders become great not because of their power but because of their ability to empower others” - John Maxwell</h3>
+              <h3>"In the midst of chaos, there is also opportunity." - Sun Tzu</h3>
               <p>For decades, business executives have concentrated on the art and techniques of management. But in today's competitive times, more is required. Successful executives must be leaders as well. In this dynamic world leaders are in a position to create opportunities and build our businesses around to witness our dreams turning into reality. Strategic leadership provides the vision and direction for the growth and success of an organization. A strategic leader institutionalizes a vision and helps the members of the organization to learn how to convert the objectives into action. This workshop will surely entail your thought of what Strategic leadership is all about.</p>
               <div class='large-screen' style='display:flex; justify-content:space-between'>
                 <div> <b>Key Takeaways</b>
@@ -98,7 +98,7 @@
                   </ul>
                 </div>
                 <div>
-                  <b> Registration Amount : TBA </b>
+                  <b> Registration Amount : Free </b>
                 </div>
               </div>
               <div class='small-screen'>
@@ -112,7 +112,7 @@
                   </ul>
                 </div>
                 <div>
-                  <b> Registration Amount : TBA </b>
+                  <b> Registration Amount : Free </b>
                 </div>
               </div><br/><br/>
               <div id = 'regBtn' class='small-screen'><a href='https://www.townscript.com/e/intaglio-workshop-series-dec-2017-020002'>Register/Sign In</a></div><br/>
