--- a/intaglio-v3/HTML/workshop/pant.html
+++ b/intaglio-v3/HTML/workshop/pant.html
@@ -3,7 +3,7 @@
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Workshop - Intaglio 2017</title>
+        <title>IIM C - Intaglio 2017</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
@@ -84,8 +84,7 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
-              <h2 class='bold event-title-small small-screen'> The Strategist's Journey and the Hidden Fortress: Cinema and the Craft of Strategic Leadership </h2>
-              <h3>"In the midst of chaos, there is also opportunity." - Sun Tzu</h3>
+              <h2 class='bold event-title-small small-screen'> "In the midst of chaos, there is also opportunity." - Sun Tzu</h3>
               <p>This workshop draws upon the power of cinema to explore the idea of strategy as a process and a journey. It involves an interactive discussion around Akira Kurosawa's 1958 epic movie 'The Hidden Fortress' and what it tells us about the nature of choices made by strategists in the process of conceptualizing and acting upon strategy. This process of making strategic choices on a certain set of dimensions over time is viewed as the craft of strategic leadership.</p>
               <div style='display:flex; justify-content:space-between'>
                 <div> <b>Key Takeaways</b>
