updated pant content

--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -1161,8 +1161,8 @@
                           <div class='desc-workshop'>
                             <div style='font-size:16px;'><b> Strategic Management Group </b></div>
                             <div style='font-weight:500'> Speaker : Prof. Anirvan Pant </div>
-                            <div style='font-weight:500'> Date: 16th Dec, 10:30 AM </div>
-                            <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/pant.html' target='_blank'>More Details</a></button>
+                            <div style='font-weight:500'> Date: 16th Dec, 12:00 PM </div>
+                            <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/iim.html' target='_blank'>More Details</a></button>
                           </div>
                         </div>
                       </div>
@@ -1293,8 +1293,8 @@
                                 <div class='desc-workshop'>
                                   <div style='font-size:16px;'><b> Strategic Management Group </b></div>
                                   <div style='font-weight:500'> Speaker : Prof. Anirvan Pant </div>
-                                  <div style='font-weight:500'> Date: 16th Dec, 10:30 AM </div>
-                                  <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/pant.html' target='_blank'>More Details</a></button>
+                                  <div style='font-weight:500'> Date: 16th Dec, 12:00 PM </div>
+                                  <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/iim.html' target='_blank'>More Details</a></button>
                                 </div>
                               </div>
                             </div>
