--- a/intaglio-v3/HTML/workshop/iim.html
+++ b/intaglio-v3/HTML/workshop/iim.html
@@ -86,15 +86,12 @@
             <div class="clearfix">
               <h2 class='bold event-title-small small-screen'> The Craft of Strategic Leadership </h2>
               <h3>"In the midst of chaos, there is also opportunity." - Sun Tzu</h3>
-              <p>For decades, business executives have concentrated on the art and techniques of management. But in today's competitive times, more is required. Successful executives must be leaders as well. In this dynamic world leaders are in a position to create opportunities and build our businesses around to witness our dreams turning into reality. Strategic leadership provides the vision and direction for the growth and success of an organization. A strategic leader institutionalizes a vision and helps the members of the organization to learn how to convert the objectives into action. This workshop will surely entail your thought of what Strategic leadership is all about.</p>
+              <p>This workshop draws upon the power of cinema to explore the idea of strategy as a process and a journey. It involves an interactive discussion around Akira Kurosawa's 1958 epic movie 'The Hidden Fortress' and what it tells us about the nature of choices made by strategists in the process of conceptualizing and acting upon strategy. This process of making strategic choices on a certain set of dimensions over time is viewed as the craft of strategic leadership.</p>
               <div class='large-screen' style='display:flex; justify-content:space-between'>
                 <div> <b>Key Takeaways</b>
                   <ul>
-                    <li>Understand what’s important to achieve something that delivers value in organisations,corporates</li>
-                    <li>Clear view why an integrated leadership architecture is vital to business success</li>
-                    <li>Insights to evaluate leadership development for success at individual & organisational levels</li>
-                    <li>Awareness of current firm development and implementation strategies</li>
-                    <li>All attendees will be provided IIM C participation certificates</li>
+                    <li>What does it mean to conceptualize strategy as a journey involving intertwined choices, rather than as a choice at a given point in time? </li>
+                    <li>What are the essential skills to practice the craft of strategic leadership? </li>
                   </ul>
                 </div>
                 <div>
@@ -104,11 +101,8 @@
               <div class='small-screen'>
                 <div> <b>Key Takeaways</b>
                   <ul>
-                    <li>Understand what’s important to achieve something that delivers value in organisations,corporates</li>
-                    <li>Clear view why an integrated leadership architecture is vital to business success</li>
-                    <li>Insights to evaluate leadership development for success at individual & organisational levels</li>
-                    <li>Awareness of current firm development and implementation strategies</li>
-                    <li>All attendees will be provided IIM C participation certificates</li>
+                    <li>What does it mean to conceptualize strategy as a journey involving intertwined choices, rather than as a choice at a given point in time? </li>
+                    <li>What are the essential skills to practice the craft of strategic leadership? </li>
                   </ul>
                 </div>
                 <div>
@@ -132,7 +126,7 @@
                     <article><a href="#" class="icon"><i class="fa fa-globe"></i></a>
                       <h6 class="heading">Speaker
                       </h6>
-                      <p>Anirvan Pant
+                      <p>Prof. Anirvan Pant
                       </p>
                     </article>
                   </li>
@@ -140,7 +134,7 @@
                     <article><a href="#" class="icon"><i class="fa fa-shekel"></i></a>
                       <h6 class="heading">Date, Time, Duration
                       </h6>
-                      <p>17th Dec, 10 AM, 3 Hours</p>
+                      <p>16th Dec, 12 PM, 3 Hours</p>
                     </article>
                   </li>
                 </ul>
