--- a/intaglio-v3/HTML/workshop/iim.html
+++ b/intaglio-v3/HTML/workshop/iim.html
@@ -148,7 +148,7 @@
                     </ul>
                   </div>
                 </div>
-                <!-- <div class="clearfix rules">
+                <div class="clearfix rules">
                   <h4> Terms & Conditions </h4>
                   <ul>
                     <li>Workshop is open for all</li>
@@ -161,7 +161,7 @@
                     <li>No cancellation can be done, however the attendee can find a suitable replacement</li>
                     <li>In all matters related to the workshop, the decision by organisers will be final and binding</li>
                   </ul>
-                </div> -->
+                </div>
 
               </div>
             </div>
