--- a/intaglio-v3/HTML/workshop/sbi.html
+++ b/intaglio-v3/HTML/workshop/sbi.html
@@ -69,7 +69,7 @@
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container large-screen">
                             <div class='event-title bold' style='width:69%'> Intangible Wealth Management</div>
-                            <div id = 'regBtn' class='pull-right' style='border-radius:45px;width:75px'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003'>Register</a></div>
+                            <div id = 'regBtn' class='pull-right' style='border-radius:45px;width:75px'><a href='https://www.townscript.com/e/intaglio-workshop-series-dec-2017-020002'>Register</a></div>
                         </div>
                     </div>
                     <!-- End Navbar Collapse -->
@@ -112,7 +112,7 @@
                 </div>
               </div>
               <br/><br/>
-              <div id = 'regBtn' class='small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY1/ADSENSE'>Register/Sign In</a></div>
+              <div id = 'regBtn' class='small-screen'><a href='https://www.townscript.com/e/intaglio-workshop-series-dec-2017-020002'>Register/Sign In</a></div>
               <br/>
             </div>
             <div class="clearfix">
