Added National Debate Contest

--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -1166,7 +1166,23 @@
                         </div>
                       </div>
                     </div>
+					<div class="col-xs-6 col-md-3 col-border">
+                      <div class='wrapper' style='border: 1px solid #ddd'>
+                        <div class='workshop'>
+                          <div class = 'workshop_main'>
+                            <img src="img/workshop/debate.jpg" alt="Clients Logo">
+                          </div>
+                          <div class='desc-workshop'>
+                            <div style='font-size:16px;'><b> National Debate Contest 2.0 </b></div>
+                            <div style='font-weight:500'> Organiser : IIMC - MCHV </div>
+                            <div style='font-weight:500'> Date: 17th Dec, 10:00 AM </div>
+                            <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='events/debate.html' target='_blank'>More Details</a></button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
+                </div>
             </div>
             <div class="content-lg container small-screen" style='height: 480px;'>
                   <div class="row margin-b-40">
@@ -1294,6 +1310,21 @@
                                   <div style='font-weight:500'> Speaker : Mr Mahesh Goel </div>
                                   <div style='font-weight:500'> Date: 16th Dec, 2:00 PM </div>
                                   <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/sbi.html' target='_blank'>More Details</a></button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+						  <div class="swiper-slide">
+                            <div class='wrapper' style='position: absolute;left: 22%; border: 1px solid #ddd'>
+                              <div class='workshop'>
+                                <div class = 'workshop_main'>
+                                  <img class="swiper-clients-img" src="img/workshop/debate.jpg" alt="Clients Logo">
+                                </div>
+                                <div class='desc-workshop'>
+                                  <div style='font-size:16px;'><b> National Debate Contest 2.0 </b></div>
+                                  <div style='font-weight:500'> Organiser: IIMC - MCHV </div>
+                                  <div style='font-weight:500'> Date: 17th Dec, 10:00 AM </div>
+                                  <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='events/debate.html' target='_blank'>More Details</a></button>
                                 </div>
                               </div>
                             </div>
