--- a/intaglio-v3/HTML/workshop/altnews.html
+++ b/intaglio-v3/HTML/workshop/altnews.html
@@ -138,7 +138,7 @@
                     <article><a href="#" class="icon"><i class="fa fa-shekel"></i></a>
                       <h6 class="heading">Date, Time, Duration
                       </h6>
-                      <p>16th Dec, 12 PM, 2 Hours</p>
+                      <p>17th Dec, 10 AM, 2 Hours</p>
                     </article>
                   </li>
                 </ul>
