--- a/intaglio-v3/HTML/workshop/sbi.html
+++ b/intaglio-v3/HTML/workshop/sbi.html
@@ -138,7 +138,7 @@
                     <article><a href="#" class="icon"><i class="fa fa-shekel"></i></a>
                       <h6 class="heading">Date, Time & Duration
                       </h6>
-                      <p>16th December, 02:00pm (2 hours)</p>
+                      <p>16th December, 03:00pm-04:30pm (1.5 hours)</p>
                     </article>
                   </li>
                 </ul>
